# pyrec

./: .gitignore  Check.hs  LICENSE  Makefile  hs2arr.sed  parse.arr  pyrec.cabal  runtime.rs
driver/: Main.hs
driver/PyrecDriver/: Commands.hs  Error.hs
exe-src/: Main.hs
haskell/: HS2Arr.hs  Main.hs  Pyrec.hs  pyrec.cabal
haskell/HS2Arr/: OrgAST.hs
haskell/Pyrec/: AST.hs  Check.hs  Compile.hs  Desugar.hs  Emit.hs  Error.hs  IR.hs  Interp.hs  Main.hs  Misc.hs  Parse.hs  PrettyPrint.hs  Report.hs  SSA.hs  ScopeCheck.hs  TypeCheck.hs
haskell/Pyrec/AST/: Check.hs  Core.hs  Desugar.hs  Module.hs  Parse.hs  Scope.hs  Type.hs
haskell/Pyrec/IR/: Check.hs  Core.hs  Desugar.hs  Parse.hs
haskell/exe/: Main.hs
haskell/test-src/Pyrec/: CheckSpec.hs
lib-src/Pyrec/: Desugar.hs  Parse.hs  PrettyPrint.hs
lib-src/Pyrec/IR/: Check.hs
pyret/: ast.arr  parse.arr
runtime/: Makefile  runtime.bc  runtime.c
src/: Pyrec.hs
src/Pyrec/: AST.hs  CPS.hs  Check.hs  CheckSpec.hs  Compile.hs  Desugar.hs  Error.hs  Foreign.hs  IR.hs  LLVM.hs  Lex.x  Misc.hs  Parse.hs  PrettyPrint.hs  Report.hs  ScopeCheck.hs  TestMisc.hs  TypeCheck.hs  TypeCheckSpec.hs
src/Pyrec/IR/: Check.hs  Core.hs  Desugar.hs  ScopeCheck.hs  TypeCheck.hs
test/: arithmetic.arr
test-data/error/: structural-nominal.arr
test-src/Pyrec/: CheckSpec.hs
tests/error/: structural-nominal2.arr
tests/fill-in/: arithmetic.arr
