name:                     pyrec
version:                  0.0.0.0
category:                 Language, Development
synopsis:                 A Compiler for Pyret
--description:              
license:                  MIT
license-file:             LICENSE
author:                   Kenneth Micklas, John Ericson
homepage:                 https://github.com/kmicklas/pyrec
bug-reports:              https://github.com/kmicklas/pyrec/issues
Cabal-Version:            >= 1.10
build-type:               Simple

extra-source-files:       runtime/*
  ,                       tests/*

source-repository head
  type:                   git
  location:               git://github.com/kmicklas/pyrec.git

library
  hs-source-dirs:         src
  default-language:       Haskell2010
  ghc-options:            -fdefer-type-errors
  default-extensions:     LambdaCase
    ,                     ScopedTypeVariables
    ,                     TupleSections

  exposed-modules:        Pyrec

    ,                     Pyrec.Lex
    ,                     Pyrec.Parse
    ,                     Pyrec.Desugar
    ,                     Pyrec.ScopeCheck
    ,                     Pyrec.TypeCheck
    ,                     Pyrec.Report
    ,                     Pyrec.Compile
    ,                     Pyrec.Emit
    ,                     Pyrec.LLVM

    ,                     Pyrec.CPS
    ,                     Pyrec.SSA
    ,                     Pyrec.AST
    ,                     Pyrec.IR
    ,                     Pyrec.IR.Check
    ,                     Pyrec.IR.Core
    ,                     Pyrec.IR.Desugar

    ,                     Pyrec.PrettyPrint
    ,                     Pyrec.Error
    ,                     Pyrec.Misc

  build-depends:          base        >=4 && <5
    ,                     mtl         >=2
    ,                     containers
    ,                     parsec      >=3
    ,                     hashable
    ,                     array
    ,                     llvm-general-pure

  build-tools:            alex

executable pyrec
  hs-source-dirs:         driver
  default-language:       Haskell2010
  ghc-options:            -fdefer-type-errors
  default-extensions:     LambdaCase
    ,                     ScopedTypeVariables
    ,                     TupleSections

  main-is:                Main.hs

  build-depends:          pyrec

    ,                     base        >=4 && <5
    ,                     mtl         >=2
    ,                     containers
    ,                     parsec      >=3

    ,                     directory
    ,                     filepath

test-suite spec
  type:                   exitcode-stdio-1.0
  cpp-options:            -DTEST

  hs-source-dirs:         src
  default-language:       Haskell2010
  ghc-options:            -fdefer-type-errors
  default-extensions:     LambdaCase
    ,                     ScopedTypeVariables
    ,                     TupleSections

  main-is:                Spec.hs

  other-modules:          Pyrec.Lex

  build-depends:          base        >=4 && <5
    ,                     mtl         >=2
    ,                     containers
    ,                     parsec      >=3
    ,                     hashable
    ,                     array
    ,                     llvm-general-pure

    ,                     directory
    ,                     filepath

    ,                     hspec >= 1.3
    ,                     QuickCheck

  build-tools:            alex
