name:                     pyrec
version:                  0.0.0.0
category:                 Language, Development
synopsis:                 A Compiler for Pyrec
--description:	          
--license:                  
--license-file:             LICENSE
author:                   Kenneth Micklas, John Ericson
--maintainer:               --email
homepage:                 http://pyret.org
--bug-reports:              https://github.com/ 
Cabal-Version:            >= 1.10
build-type:               Simple
extra-source-files:       ../runtime/*

--source-repository head
--  type:                 git
--  location:             https://github.com/

executable pyrec

  hs-source-dirs:         .
  default-language:       Haskell2010

  main-is:                Main.hs

  build-depends:          base        >=4 && <5
    ,                     containers
    ,                     directory
    ,                     filepath
