name:                     pyrec
version:                  0.0.0.0
category:                 Language, Development
synopsis:                 A Compiler for Pyrec
--description:              
--license:                  
--license-file:             LICENSE
author:                   Kenneth Micklas, John Ericson
--maintainer:               --email
homepage:                 http://pyret.org
--bug-reports:              https://github.com/ 
Cabal-Version:            >= 1.10
build-type:               Simple
extra-source-files:       ../runtime/*

--source-repository head
--  type:                 git
--  location:             https://github.com/

library
  hs-source-dirs:         .
  default-language:       Haskell2010
  default-extensions:     LambdaCase
    ,                     ScopedTypeVariables

  exposed-modules:        Pyrec

    ,                     Pyrec.Parse
    ,                     Pyrec.Desugar
    ,                     Pyrec.Check
    ,                     Pyrec.Report
    ,                     Pyrec.Compile
    ,                     Pyrec.Emit

    ,                     Pyrec.Interp

    ,                     Pyrec.SSA
    ,                     Pyrec.AST
    ,                     Pyrec.IR
    ,                     Pyrec.IR.Check
    ,                     Pyrec.IR.Core
    ,                     Pyrec.IR.Desugar

    ,                     Pyrec.PrettyPrint
    ,                     Pyrec.Error
    ,                     Pyrec.Misc

  build-depends:          base        >=4 && <5
    ,                     mtl         >=2
    ,                     containers
    ,                     parsec      >=3
    ,                     hashable

executable pyrec
  hs-source-dirs:         exe
  default-language:       Haskell2010
  default-extensions:     LambdaCase
    ,                     ScopedTypeVariables

  main-is:                Main.hs

  build-depends:          pyrec
    ,                     base        >=4 && <5
    ,                     mtl         >=2
    ,                     containers
    ,                     parsec      >=3
    ,                     directory
    ,                     filepath

test-suite spec
  type:                   exitcode-stdio-1.0

  hs-source-dirs:         test-src
  default-language:       Haskell2010
  default-extensions:     LambdaCase
    ,                     ScopedTypeVariables

  main-is:                Spec.hs

  build-depends:          base
    ,                     hspec >= 1.3
    ,                     QuickCheck
    ,                     pyrec
